# d-feet

./: .gitlab-ci.yml  configure.ac  meson.build  org.gnome.d_feet.json  org.gnome.dfeet.json
data/: Makefile.am  meson.build  org.gnome.d_feet.appdata.xml.in  org.gnome.d_feet.desktop.in.in  org.gnome.d_feet.gschema.xml  org.gnome.dfeet.appdata.xml.in
data/icons/: Makefile.am  meson.build
data/ui/: bus.ui
help/: meson.build
po/: POTFILES.in  POTFILES.skip
src/dfeet/: application.py  bus_watch.py  dbus_utils.py  executemethoddialog.py  introspection.py  meson.build  settings.py
src/tests/: Makefile.am  meson.build  tests.py  tests.py.in
